--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,73 +15,26 @@ $new-data:                  #241F0C !default;
 // ----------------------------------------------------------------
 
 // words color
-$words-normal:       #FFEBC8 !default;
-$words-high-light:   #F9C152 !default;
-$words-supporting:   #8F9598 !default;
-$words-disable:      #4A4D4C !default;
-$words-title:        #136C5E !default;
-$words-black:        #000000 !default;
-
-
-// ----------------------------------------------------------------
-
-// UP
-$up-01: #181110 !default;
-$up-02: #241411 !default;
-$up-03: #301613 !default;
-$up-04: #3c1915 !default;
-$up-05: #481c17 !default;
-$up-06: #551e18 !default;
-$up-07: #60201b !default;
-$up-08: #6d241c !default;
-$up-09: #79261e !default;
-$up-10: #852920 !default;
-
-//DOWN
-$down-01: #0b1712 !default;
-$down-02: #0a1f16 !default;
-$down-03: #0a271a !default;
-$down-04: #09301f !default;
-$down-05: #083823 !default;
-$down-06: #084027 !default;
-$down-07: #07482c !default;
-$down-08: #075130 !default;
-$down-09: #065934 !default;
-$down-10: #056238 !default;
+$words-normal:              #FFEBC8 !default;
+$words-high-light:          #F9C152 !default;
+$words-supporting:          #8F9598 !default;
+$words-disable:             #4A4D4C !default;
+$words-title:               #136C5E !default;
+$words-black:               #000000 !default;
 
 // ----------------------------------------------------------------
 
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
-
-$blue:    #0d6efd !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #d63384 !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #fadb14 !default;
-$green:   #52c41a !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
-
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$white:                     #ffffff !default;
+$gray-100:                  #f8f9fa !default;
+$gray-200:                  #e9ecef !default;
+$gray-300:                  #dee2e6 !default;
+$gray-400:                  #ced4da !default;
+$gray-500:                  #adb5bd !default;
+$gray-600:                  #6c757d !default;
+$gray-700:                  #495057 !default;
+$gray-800:                  #343a40 !default;
+$gray-900:                  #212529 !default;
+$black:                     #000000 !default;
 
 // ----------------------------------------------------------------
 
@@ -273,21 +226,41 @@ $input-border-icon-only-disabled:          1px solid transparent !default;
 
 // search - input
 // normal
-$input-search-background:               $element-background !default;
-$input-search-color:                    $words-supporting !default;
-$input-search-border:                   1px solid $basic-btn !default;
+$input-search-background:                  $element-background !default;
+$input-search-color:                       $words-supporting !default;
+$input-search-border:                      1px solid $basic-btn !default;
 // hover
-$input-search-background-hover:         #0A2420 !default;
-$input-search-color-hover:              $words-supporting !default;
-$input-search-border-hover:             1px solid $basic-btn !default;
+$input-search-background-hover:            #0A2420 !default;
+$input-search-color-hover:                 $words-supporting !default;
+$input-search-border-hover:                1px solid $basic-btn !default;
 // focus
-$input-search-background-focus:         $element-background !default;
-$input-search-color-focus:              $words-high-light !default;
-$input-search-border-focus:             1px solid $words-high-light !default;
+$input-search-background-focus:            $element-background !default;
+$input-search-color-focus:                 $words-high-light !default;
+$input-search-border-focus:                1px solid $words-high-light !default;
 // disabled
-$input-search-background-disabled:      $basic-btn !default;
-$input-search-color-disabled:           $words-disable !default;
-$input-search-border-disabled:          1px solid $basic-btn !default;
+$input-search-background-disabled:         $basic-btn !default;
+$input-search-color-disabled:              $words-disable !default;
+$input-search-border-disabled:             1px solid $basic-btn !default;
 
 // ----------------------------------------------------------------
+
+// input-number
+
+$input-number-line-height:                 $input-line-height;
+// normal
+$input-number-background:                  $element-background !default;
+$input-number-color:                       $input-search-color !default;
+$input-number-border:                      $input-search-border !default;
+// hover
+$input-number-background-hover:            $element-background !default;
+$input-number-color-hover:                 $input-search-color-hover !default;
+$input-number-border-hover:                $input-search-border-hover !default;
+// focus
+$input-number-background-focus:            $element-background !default;
+$input-number-color-focus:                 $input-search-color-focus !default;
+$input-number-border-focus:                $input-search-border-focus !default;
+// disabled
+$input-number-background-disabled:         $element-background !default;
+$input-number-color-disabled:              $input-search-color-disabled !default;
+$input-number-border-disabled:             $input-search-border-disabled !default;
 
