--- a/src/components/Radio/_style.scss
+++ b/src/components/Radio/_style.scss
@@ -7,7 +7,7 @@
   line-height: $line-height-base;
   font-weight: $input-font-weight;
   font-family: $input-font-family;
-  @include radio-style(
+  @include radio-checkbox-style(
     // normal
     $radio-background,
     $radio-color,
